Fixed a bug with Safari where the site name was overlapping the site icon when name was taking up more than one line

--- a/src/resources/css/source/cp.scss
+++ b/src/resources/css/source/cp.scss
@@ -62,7 +62,7 @@ body { overflow-x: hidden; }
 
 #global-sidebar .topbar { min-height: -webkit-min-content; min-height: -moz-min-content; }
 #global-sidebar .topbar a.site-name { @include flex-grow(1); padding: 14px; }
-#global-sidebar .topbar a.site-name .photo-container { margin-right: 14px; }
+#global-sidebar .topbar a.site-name .photo-container { margin-right: 14px; flex-shrink: 0; }
 #global-sidebar .topbar a.site-name h2 { padding: 0; margin: 0; }
 #global-sidebar .topbar a.updates { position: relative; color: $noticecolor; }
 #global-sidebar .topbar a.updates.critical { color: $submitcolor; }
